tests/negative/parser/dyn_non_ident.orng
// dyn_non_ident.orng:6:11: error: expected `identifier`, got `{`
//     &dyn {Int}
//          ^
// 
fn main() -> Int { 
    &dyn {Int}
}
